{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "f0ca03b3-7522-4b99-a150-c1ed2fcf71b4",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9b481ef6-98a9-489d-a893-eb3dc30ba581",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e7da69af-30e1-4af3-8551-e4c17f8d653f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da3a1484-1725-4bd1-9b0f-922228ee6db6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "bd894b3a-3ca4-4308-9944-4bcce882d61f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cf85ad62-69bf-4e08-832c-909a2b851a67",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5374f3ab-960c-4a27-9d2a-e0bbfad381bb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "248aa0bb-513f-4ec3-8f0d-5aa3326dd1b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "56751ce0-2a9a-4084-9500-0fd66e605765",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "45e21984-8d69-4792-88a0-9fab73c6e3c0",
            "actions": [
                {
                    "name": "turnLeft",
                    "type": "Button",
                    "id": "6a9c9d5b-e8d4-462c-b132-a5c4ff9dafe2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "turnRight",
                    "type": "Button",
                    "id": "9ce415f1-b97e-49f8-b865-3e69123acaa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61b10a4f-88d4-45c8-bedb-c53e164c9461",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "turnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c3269bd-e685-40fd-8876-3af35cb6f402",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard and mouses",
                    "action": "turnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard and mouses",
            "bindingGroup": "keyboard and mouses",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}